--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -14,7 +14,7 @@
                 class="my-icon vcenter pointer"></ion-icon>
             </span>
             <span class="padding-left-30 font-weight-500 fontSize-16">
-              &nbsp;&nbsp;Medical Certificate
+              &nbsp;&nbsp;Final Dx | Med Cert
               <span class="fontSize-14">({{modeSelected}}) </span>
               <!--<ion-icon style="float:right; padding-right:20px" name="ellipsis-vertical-outline"
                 id="trigger-inbox-popover" class="pointer">
