--- a/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
+++ b/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
@@ -10,6 +10,7 @@
       </ion-title>
     </ion-toolbar>
   </div>
+
   <ion-grid class="ion-no-padding" *ngIf="!isDesktop">
     <ion-row class="">
       <ion-col
@@ -91,14 +92,14 @@
                 color="warning"
                 (click)="presentAlert()"
                 *ngIf="(isApproved !='1' && summary_status =='FA' && (doctor_Status_code=='AP' && isAPVerifyTCstatus == false)) && !isLoading"
-                >Approve?
+                >Approve Summary?
               </ion-button>
               <ion-button
                 slot="end"
                 color="warning"
                 (click)="presentAlert()"
                 *ngIf="(isApproved !='1' && summary_status =='FA' && (doctor_Status_code=='TC' && isAPVerifyTCstatus) ) && !isLoading"
-                >Approve?
+                >Approve Summary?
               </ion-button>
               <ion-button slot="end" *ngIf="summary_status =='RA'"
                 >Approved
@@ -161,6 +162,31 @@
                     </div>
                   </ion-label>
                 </ion-item>
+
+                <ion-grid class="ion-no-padding">
+                  <ion-row class="ion-no-padding">
+                    <ion-col>
+                      <ion-button
+                        expand="block"
+                        color="secondary"
+                        *ngIf="x.isPnApproved == false"
+                        (click)="presentActionSheetapprove(x)"
+                        >Approve | Progress Note {{x.event_time_c}}
+                        ?</ion-button
+                      >
+                      <ion-button
+                        expand="block"
+                        color="tertiary"
+                        *ngIf="x.isPnApproved"
+                        (click)="presentActionSheetRevoke(x)"
+                        >Revoke Approval?</ion-button
+                      >
+                      <ion-item *ngIf="x.isPnApproved"
+                        >Approved on : {{x.pnApprovedDate}}</ion-item
+                      >
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
               </ion-card>
             </div>
           </ion-list>
