--- a/src/app/tab-dashboard/tab-dashboard.page.html
+++ b/src/app/tab-dashboard/tab-dashboard.page.html
@@ -19,7 +19,7 @@
                   class="pointer"
                   routerLink="/menu/inbox"
                   routerDirection="root">
-                  <ion-label>&nbsp;Medical Certificate </ion-label>
+                  <ion-label>&nbsp;Final Dx | Med Cert</ion-label>
                 </ion-item>
                 <ion-item
                   class="pointer"
