--- a/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
+++ b/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
@@ -3,26 +3,47 @@
     [ngClass]="{'active-link':active3, 'notactive':!active3}" class="link" size="small">
     {{this.functionsService.convertAllFirstLetterToUpperCase(this.constants.CHH_LABEL__VALUE__BOTH)}}
   </ion-button-->
-  <ion-button id="ion-button-filter-cebu" fill="clear" (click)="onSubmit(this.constants.CHH_SITE__CODE__CEBU,active)"
-    [ngClass]="{'active-link':active, 'notactive':!active}" class="link" size="small">
+  <ion-button
+    id="ion-button-filter-cebu"
+    fill="clear"
+    (click)="onSubmit(this.constants.CHH_SITE__CODE__CEBU,active)"
+    [ngClass]="{'active-link':active, 'notactive':!active}"
+    class="link"
+    size="small">
     {{this.functionsService.convertAllFirstLetterToUpperCase(this.constants.CHH_LABEL__VALUE__CEBU)}}
   </ion-button>
-  <ion-button id="ion-button-filter-mandaue" fill="clear"
+  <ion-button
+    id="ion-button-filter-mandaue"
+    fill="clear"
     (click)="onSubmit(this.constants.CHH_SITE__CODE__MANDAUE,active1)"
-    [ngClass]="{'active-link':active1, 'notactive':!active1}" class="link" size="small">
+    [ngClass]="{'active-link':active1, 'notactive':!active1}"
+    class="link"
+    size="small">
     {{this.functionsService.convertAllFirstLetterToUpperCase(this.constants.CHH_LABEL__VALUE__MANDAUE)}}
   </ion-button>
 
-  <ion-button fill="clear" *ngIf="isDesktop" [ngClass]="{'active-link':active2, 'notactive':!active2}" class="link"
+  <ion-button
+    fill="clear"
+    *ngIf="isDesktop"
+    [ngClass]="{'active-link':active2, 'notactive':!active2}"
+    class="link"
     size="small">
-    <ion-select [(ngModel)]="admittedOrDischarge" placeholder="Filter" (ionChange)="changeRedirect($event)"
-      color="mango" style="display:none">
+    <ion-select
+      [(ngModel)]="admittedOrDischarge"
+      placeholder="Filter"
+      (ionChange)="changeRedirect($event)"
+      color="mango"
+      style="display: none">
       <ion-select-option value="All">All</ion-select-option>
       <ion-select-option value="AC">Admitted</ion-select-option>
       <ion-select-option value="DN">For Discharge</ion-select-option>
     </ion-select>
-    <select [(ngModel)]="admittedOrDischarge" placeholder="Filter" (ionChange)="changeRedirect($event)" color="mango"
-      style="border:none;">
+    <select
+      [(ngModel)]="admittedOrDischarge"
+      placeholder="Filter"
+      (ionChange)="changeRedirect($event)"
+      color="mango"
+      style="border: none">
       <option value="All">All</option>
       <option value="AC">Admitted</option>
       <option value="DN">for Discharge</option>
@@ -38,21 +59,35 @@
       <ion-select-option value="{{this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE}}">{{this.functionsService.convertAllFirstLetterToUpperCase(this.constants.ADMISSION_STATUS__VALUE__FOR_DISCHARGE)}}</ion-select-option>
     </ion-select>
   </ion-button> -->
-  <ion-fab horizontal="end" vertical="top" slot="fixed" *ngIf="!isDesktop" class='margintop-15'>
-    <ion-fab-button color="light" class="">
+  <ion-fab
+    horizontal="end"
+    vertical="top"
+    slot="fixed"
+    *ngIf="!isDesktop"
+    class="margintop-15">
+    <ion-fab-button color="light" class="" size="small">
       <ion-icon name="options-outline"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="bottom">
-      <ion-fab-button class="tab-font-family" color="light"
-        (click)="onSubmit1(this.constants.ADMISSION_STATUS_SELECTION__VALUE__ALL,true)" data-desc="All">
+      <ion-fab-button
+        class="tab-font-family"
+        color="light"
+        (click)="onSubmit1(this.constants.ADMISSION_STATUS_SELECTION__VALUE__ALL,true)"
+        data-desc="All">
         <ion-icon name="person-outline"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button class="tab-font-family" color="light"
-        (click)="onSubmit1(this.constants.ADMISSION_STATUS__CODE__ADMITTED,true)" data-desc="Admitted">
+      <ion-fab-button
+        class="tab-font-family"
+        color="light"
+        (click)="onSubmit1(this.constants.ADMISSION_STATUS__CODE__ADMITTED,true)"
+        data-desc="Admitted">
         <ion-icon name="person-add-outline"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button class="tab-font-family" color="light"
-        (click)="onSubmit1(this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE,true)" data-desc="For Discharge">
+      <ion-fab-button
+        class="tab-font-family"
+        color="light"
+        (click)="onSubmit1(this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE,true)"
+        data-desc="For Discharge">
         <ion-icon name="person-remove-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
