--- a/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
+++ b/src/app/chh-web-components/chh-app-patient-header/chh-app-patient-header.component.html
@@ -287,7 +287,7 @@
             </div>
           </div>
 
-          <div class="font-size12" style="font-size: 13px">
+          <div class="font-size12" style="font-size: 13px" *ngIf="showPFDetals">
             <ion-icon name="calendar-outline" slot="start"></ion-icon>
             <span style="font-size: 13px">
               Managed from &nbsp;&nbsp;: {{ patientDetailfromApi_from }}</span
@@ -296,7 +296,7 @@
           <div
             class="font-size12"
             style="font-size: 13px"
-            *ngIf="admission_status == 'DN'">
+            *ngIf="admission_status == 'DN' && showPFDetals">
             <ion-icon name="calendar-outline" slot="start"></ion-icon>
             <span style="font-size: 13px">
               Managed to &nbsp;&nbsp;: {{ patientDetailfromApi_to }}</span
