--- a/src/app/pages/in-patient-patient-information/patient-history/patient-history.page.html
+++ b/src/app/pages/in-patient-patient-information/patient-history/patient-history.page.html
@@ -1,4 +1,16 @@
 <ion-header mode="md" class="ion-no-border">
+  <ion-toolbar color="mango">
+    <span
+      class="padding-left-10"
+      routerLink="/menu/"
+      routerDirection="backward"
+      color="chh-css-primary2">
+      <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
+    </span>
+    <span class="padding-left-30 font-weight-500 font-size-20">
+      &nbsp;&nbsp;Progress Notes Patient List
+    </span>
+  </ion-toolbar>
   <div>
     <!--ion-toolbar [color]="isDesktop?'':'mango'" *ngIf="!isDesktop">
       <ion-grid class="ion-no-padding">
@@ -20,7 +32,7 @@
         </ion-row>
       </ion-grid>
     </ion-toolbar-->
-    <ion-toolbar [color]="isDesktop?'':'mango'">
+    <!--ion-toolbar [color]="isDesktop?'':'mango'">
       <ion-grid class="ion-no-padding">
         <ion-row>
           <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
@@ -39,7 +51,7 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-    </ion-toolbar>
+    </ion-toolbar-->
     <ion-grid class="ion-no-padding"> </ion-grid>
     <ion-grid class="ion-no-padding chh-darkmode">
       <ion-row>
@@ -264,7 +276,7 @@
                 <ion-list slot="content">
                   <div *ngFor="let x of y.data">
                     <ion-card
-                      (click)="detail(x.admission_no)"
+                      (click)="detail(x.admission_no,x)"
                       mode="ios"
                       class="pointer"
                       [attr.data-testid]="x.admission_no">
@@ -276,7 +288,7 @@
                             class="ion-no-padding"
                             style="padding-bottom: 5px">
                             <h2 class="ion-text-wrap" style="padding-top: 20px">
-                              View Progress Notes of Patient : <br />{{
+                              <i>View progress notes of patient</i> : <br />{{
                               x.last_name }}, {{ x.first_name }} {{
                               x.middle_name }}
                               <ion-text color="primary">
