--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -22,7 +22,7 @@
                   class="pointer"
                   routerLink="/menu/inbox"
                   routerDirection="root">
-                  <ion-label>&nbsp;Medical Certificate </ion-label>
+                  <ion-label>&nbsp;Final Dx | Med Cert</ion-label>
                 </ion-item>
                 <ion-item
                   class="pointer"
@@ -62,6 +62,7 @@
         <ion-searchbar
           [(ngModel)]="searchBar"
           (ionChange)="filterList()"
+          placeholder="Search Name or Room Number"
           mode="ios"></ion-searchbar>
       </ion-col>
     </ion-row>
@@ -255,7 +256,7 @@
                 <ion-list slot="content">
                   <div *ngFor="let x of y.data">
                     <ion-card
-                      (click)="detail(x.admission_no)"
+                      (click)="detail(x.admission_no,x)"
                       mode="ios"
                       class="pointer"
                       [attr.data-testid]="x.admission_no">
