--- a/src/app/tab-news-feed/tab-news-feed.page.html
+++ b/src/app/tab-news-feed/tab-news-feed.page.html
@@ -18,7 +18,7 @@
                   class="pointer"
                   routerLink="/menu/inbox"
                   routerDirection="root">
-                  <ion-label>&nbsp;Medical Certificate </ion-label>
+                  <ion-label>&nbsp;Final Dx | Med Cert</ion-label>
                 </ion-item>
                 <ion-item
                   class="pointer"
