--- a/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
+++ b/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
@@ -171,7 +171,7 @@
                         color="secondary"
                         *ngIf="x.isPnApproved == false"
                         (click)="presentActionSheetapprove(x)"
-                        >Approve | Progress Note {{x.event_time_c}}
+                        >Approve Progress Note - {{x.event_time_c}}
                         ?</ion-button
                       >
                       <ion-button
