removed progress notes view

--- a/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
+++ b/src/app/pages/in-patient-patient-information/progress-notes-per-day/progress-notes-per-day.page.html
@@ -163,7 +163,7 @@
                   </ion-label>
                 </ion-item>
 
-                <ion-grid class="ion-no-padding">
+                <!--ion-grid class="ion-no-padding">
                   <ion-row class="ion-no-padding">
                     <ion-col>
                       <ion-button
@@ -186,7 +186,7 @@
                       >
                     </ion-col>
                   </ion-row>
-                </ion-grid>
+                </ion-grid-->
               </ion-card>
             </div>
           </ion-list>
