--- a/src/app/pages/in-patient-patient-information/progress-notes/progress-notes.page.html
+++ b/src/app/pages/in-patient-patient-information/progress-notes/progress-notes.page.html
@@ -52,7 +52,7 @@
               *ngIf="!progressNotesIsNotReady">
               <ion-item>
                 Day #<b>{{x.day}} | {{x.dateCreateConverted}}</b>
-                &nbsp;(Approved {{x.ApperovedpnCounter}} of {{ x.pnCounter}})
+                <!--&nbsp;(Approved {{x.ApperovedpnCounter}} of {{ x.pnCounter}})-->
 
                 <span *ngIf="x.date_approved != null">&nbsp;|&nbsp;</span>
                 <ion-badge
