--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -24,13 +24,13 @@
                   routerDirection="root">
                   <ion-label>&nbsp;Final Dx | Med Cert</ion-label>
                 </ion-item>
-                <!--ion-item
+                <ion-item
                   class="pointer"
                   routerLink="/menu/patient-history"
                   routerDirection="root"
                   dismiss-on-select="true">
                   <ion-label>&nbsp;Progress Notes </ion-label>
-                </ion-item-->
+                </ion-item>
               </ion-list>
             </ion-content>
           </ng-template>
