--- a/src/app/chh-web-components/soap-show-hide/soap-show-hide.component.html
+++ b/src/app/chh-web-components/soap-show-hide/soap-show-hide.component.html
@@ -16,21 +16,34 @@
   <button ion-button class="floatRight" (click)="process();" *ngIf="noteslength">show less</button>
 </div-->
 
-
-
 <ion-label class="ion-text-wrap" *ngIf="truncating">
   <ion-text class="fontSize-18">
-    <b>{{SOAP}}</b>&nbsp;
-  </ion-text>
+    <b>{{ SOAP }}</b
+    >&nbsp; </ion-text
+  ><br />
   <ion-text class="custom-font" [innerHtml]="comment_small"></ion-text>
-  <ion-text color="mango" class="floatRight" (click)="process()" *ngIf="noteslength">show more</ion-text>
+  <ion-text
+    color="mango"
+    class="floatRight"
+    (click)="process()"
+    *ngIf="noteslength"
+    >show more</ion-text
+  >
 </ion-label>
 
 <ion-label class="ion-text-wrap" *ngIf="!truncating">
   <ion-text>
-    <b class="fontSize-18">{{SOAP}}</b>&nbsp;
-  </ion-text>
+    <b class="fontSize-18">{{ SOAP }}</b
+    >&nbsp; </ion-text
+  ><br />
   <ion-text class="custom-font" [innerHtml]="comment"></ion-text>
-  <ion-text color="mango" class="floatRight" (click)="process()" *ngIf="noteslength">show less</ion-text>
+  <ion-text
+    color="mango"
+    class="floatRight"
+    (click)="process()"
+    *ngIf="noteslength"
+    >show less</ion-text
+  >
 </ion-label>
+
 <hr />
