--- a/src/app/pages/in-patient-patient-information/patient-history/patient-history.page.html
+++ b/src/app/pages/in-patient-patient-information/patient-history/patient-history.page.html
@@ -66,7 +66,7 @@
           </chh-app-hospital-selector-with-all-and-filter-->
           <chh-app-hospital
             (hospital)="locationAction($event)"
-            Activator="true"
+            [Activator]="site"
             readonlyComp="false"></chh-app-hospital>
         </ion-col>
       </ion-row>
@@ -276,7 +276,6 @@
                 <ion-list slot="content">
                   <div *ngFor="let x of y.data">
                     <ion-card
-                      (click)="detail(x.admission_no,x)"
                       mode="ios"
                       class="pointer"
                       [attr.data-testid]="x.admission_no">
@@ -284,19 +283,24 @@
                         <ion-label style="margin-top: -5px">
                           <ion-item
                             slot="start"
-                            lines="none"
                             class="ion-no-padding"
+                            (click)="detail(x.admission_no,x)"
                             style="padding-bottom: 5px">
                             <h2 class="ion-text-wrap" style="padding-top: 20px">
-                              <i>View progress notes of patient</i> : <br />{{
-                              x.last_name }}, {{ x.first_name }} {{
-                              x.middle_name }}
+                              <br />{{ x.last_name }}, {{ x.first_name }} {{
+                              x.middle_name }}<br />
+
                               <ion-text color="primary">
                                 <p color="primary">
                                   <b
                                     >{{x.dob}} <strong>|</strong> {{x.age}}
                                     <strong>|</strong> {{x.gender}}</b
                                   >
+                                </p>
+                              </ion-text>
+                              <ion-text color="primary">
+                                <p color="primary">
+                                  <b>{{x.admission_no}} </b>
                                 </p>
                               </ion-text>
                             </h2>
@@ -306,45 +310,72 @@
                             class="ion-no-padding"
                             lines="none"
                             style="padding-top: 10px !important">
-                            <p>
-                              <span
-                                *ngIf="x.site == this.constants.CHH_SITE__CODE__CEBU">
+                            <div class="ion-text-wrap">
+                              <div
+                                class="ion-text-wrap"
+                                (click)="detail(x.admission_no,x)">
+                                <span
+                                  *ngIf="x.site == this.constants.CHH_SITE__CODE__CEBU">
+                                  <ion-icon
+                                    name="location-outline"
+                                    slot="start"></ion-icon>
+                                  {{this.constants.CHH_NAME__VALUE__CEBU}}
+                                </span>
+                                <span
+                                  *ngIf="x.site == this.constants.CHH_SITE__CODE__MANDAUE">
+                                  <ion-icon
+                                    name="location-outline"
+                                    slot="start"></ion-icon>
+                                  {{this.constants.CHH_NAME__VALUE__MANDAUE}} </span
+                                ><br />
                                 <ion-icon
-                                  name="location-outline"
+                                  name="bed-outline"
                                   slot="start"></ion-icon>
-                                {{this.constants.CHH_NAME__VALUE__CEBU}}
-                              </span>
-                              <span
-                                *ngIf="x.site == this.constants.CHH_SITE__CODE__MANDAUE">
-                                <ion-icon
-                                  name="location-outline"
-                                  slot="start"></ion-icon>
-                                {{this.constants.CHH_NAME__VALUE__MANDAUE}} </span
-                              ><br />
-                              <ion-icon
-                                name="bed-outline"
-                                slot="start"></ion-icon>
-                              Room {{x.room_no}}<br />
+                                Room {{x.room_no}}<br />
 
-                              <ion-icon
-                                name="clipboard-outline"
-                                slot="start"></ion-icon>
-                              as {{x.doctor_Status}}<br />
-                              <ion-icon
-                                name="alarm-outline"
-                                slot="start"
-                                color=""
-                                *ngIf="x.forDischargeDateTime != null">
-                              </ion-icon>
-                              <ion-text
-                                *ngIf="x.forDischargeDateTime != null"
-                                color="">
-                                DN : {{x.forDischargeDateTime}}<br />
-                              </ion-text>
+                                <ion-icon
+                                  name="clipboard-outline"
+                                  slot="start"></ion-icon>
+                                as {{x.doctor_Status}}<br />
+                                <ion-icon
+                                  name="alarm-outline"
+                                  slot="start"
+                                  color="">
+                                </ion-icon>
+                                <ion-text color="">
+                                  Admitted : {{x.admission_date}}<br />
+                                </ion-text>
+                                <ion-icon
+                                  name="alarm-outline"
+                                  slot="start"
+                                  color="">
+                                </ion-icon>
+                                <ion-text
+                                  color=""
+                                  *ngIf="x.discharged_date != null">
+                                  Discharged : {{x.discharged_date}}<br />
+                                </ion-text>
+                                <ion-text
+                                  *ngIf="x.discharged_date == null"
+                                  color="">
+                                  Discharged :
+                                  <ion-text color="mango"
+                                    >&nbsp;<b>Still Admitted</b></ion-text
+                                  ><br />
+                                </ion-text>
+                              </div>
+
+                              <div
+                                style="
+                                  border-top: 1px solid rgb(134, 134, 134);
+                                ">
+                                <app-prognotesheadview
+                                  [account_no]="x.admission_no"
+                                  [doctor_Status_code]="x.doctor_Status_code"
+                                  [mdCode]="x.dr_code"></app-prognotesheadview>
+                              </div>
                               <!--ion-icon name="body-outline"></ion-icon>Patient Journey<br /-->
-                            </p>
-
-                            <br />
+                            </div>
                           </ion-row>
                         </ion-label>
                       </ion-item>
