--- a/src/app/pages/doctors-information/inbox/inbox.page.html
+++ b/src/app/pages/doctors-information/inbox/inbox.page.html
@@ -288,7 +288,7 @@
                       mode="ios"
                       size="small"
                       fill="outline"
-                      color="mango"
+                      color="primary"
                       shape=""
                       expand="block"
                       (click)="viewCerticate(x)">
