--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -258,7 +258,7 @@
                     <ion-card
                       (click)="detail(x.admission_no,x)"
                       mode="ios"
-                      class="pointer"
+                      class="pointer custom-card"
                       [attr.data-testid]="x.admission_no">
                       <ion-item lines="none">
                         <ion-avatar slot="start">
