--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -310,6 +310,10 @@ body[color-theme='dark'] {
    */
 
 .ios body[color-theme='dark'] {
+    .custom-card {
+        border: 1px solid #fff;
+    
+      }
   --ion-background-color: #121212;
   --ion-background-color-rgb: 18, 18, 18;
   --ion-background-color-rgb: 0, 0, 0;
@@ -348,6 +352,12 @@ body[color-theme='dark'] {
    */
 
 .md body[color-theme='dark'] {
+  
+
+  .custom-card {
+        border: 1px solid #fff;
+
+    }
   --ion-background-color: #121212;
   --ion-background-color-rgb: 18, 18, 18;
 
