--- a/src/app/pages/in-patient-patient-information/diagnostic-results/diagnostic-results.page.html
+++ b/src/app/pages/in-patient-patient-information/diagnostic-results/diagnostic-results.page.html
@@ -81,22 +81,22 @@
                     [(ngModel)]="resultType"
                     (ionChange)="onResultSelect($event)">
                     <ion-select-option selected value="laboratory-by-account-no"
-                      >Laboratory Results</ion-select-option
+                      >Laboratory</ion-select-option
                     >
                     <ion-select-option value="pulmonary-by-account-no"
-                      >Pulmonary Results</ion-select-option
+                      >Pulmonary</ion-select-option
                     >
                     <ion-select-option value="endoscopy-by-account-no"
-                      >Endoscopy Results</ion-select-option
+                      >Endoscopy</ion-select-option
                     >
                     <ion-select-option value="cardio-by-account-no"
-                      >Cardiology Results</ion-select-option
+                      >Cardiology</ion-select-option
                     >
                     <ion-select-option value="neurophysio-by-account-no"
-                      >Neurophysiology Results</ion-select-option
+                      >Neurophysiology</ion-select-option
                     >
                     <ion-select-option value="radiology-by-account-no"
-                      >Special Imaging Results</ion-select-option
+                      >Special Imaging</ion-select-option
                     >
                   </ion-select>
                 </ion-item>
