added doki medical abstract approval

--- a/src/app/tab-in-patients/tab-in-patients.page.html
+++ b/src/app/tab-in-patients/tab-in-patients.page.html
@@ -31,6 +31,13 @@
                   dismiss-on-select="true">
                   <ion-label>&nbsp;Progress Notes </ion-label>
                 </ion-item>
+                <ion-item
+                  class="pointer"
+                  routerLink="/menu/search-Medical-Abstract"
+                  routerDirection="root"
+                  dismiss-on-select="true">
+                  <ion-label>&nbsp;Medical Abstract </ion-label>
+                </ion-item>
               </ion-list>
             </ion-content>
           </ng-template>
